--- a/DtApp/src/pages/Staff/StaffPrintQueuePage.module.css
+++ b/DtApp/src/pages/Staff/StaffPrintQueuePage.module.css
@@ -146,3 +146,9 @@
     background-color: #2c2c2c;
     color: #fff;
 }
+/* src/pages/Staff/StaffPrintQueuePage.module.css (Add to the bottom) */
+
+
+.printFileButton:hover {
+    color: #007bff; /* Blue on hover */
+}
